--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "license": "MIT",
-  "keywords": ["feature-toggle", "php"],
+  "keywords": ["adapter", "feature-flag", "feature-flags", "feature-toggle", "feature-toggles", "php", "php82"],
   "require": {
     "php": "^8.2",
     "ext-json": "*",
